@@ -690,6 +690,12 @@ Appends the machine's hostname to *<em>sa</em>.
 Returns 0 if it succeeds and -1 (and sets errno) if it fails.
 </p>
 
+<p>
+<code> int sagetexecname (stralloc *sa) </code> <br />
+Appends the full path of the current executable to *<em>sa</em>.
+Returns 0 if it succeeds and -1 (and sets errno) if it fails.
+</p>
+
 <h3> Temporization </h3>
 
 <p>
