@@ -22,6 +22,7 @@
  <li> New <tt>buffer_timed_getv</tt>, <tt>buffer_timed_putv</tt>,
 <tt>timed_read</tt> and <tt>timed_readv</tt>,
 <tt>timed_write</tt> and <tt>timed_writev</tt> functions. </li>
+ <li> New sysdeps, and new <tt>sagetexecname</tt> function. </li>
 </ul>
 
 <h2> in 2.14.3.0 </h2>
