@@ -3,9 +3,12 @@ Changelog for skalibs.
 In 2.14.4.0
 -----------
 
+ - Bugfixes.
  - Documentation fixes. (This file, in particular.)
  - New functions: buffer_timed_getv, buffer_timed_putv,
    timed_read, timed_readv, timed_Write, timed_writev
+ - New sysdeps, better handling of variable sysdeps
+ - New function: sagetexecname
 
 
 In 2.14.3.0
